// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Can't convert double quote @default if a single quote character is in the string 1`] = `
"/**
 * The summary
 *
 * @default \\"This isn't bad\\"
 */
"
`;

exports[`convert double quote @default to single quote 1`] = `
"/**
 * The summary
 *
 * @default 'value'
 */
"
`;

exports[`convert single quote @default to double quote 1`] = `
"/**
 * The summary
 *
 * @default \\"value\\"
 */
"
`;

exports[`default empty array 1`] = `
"/**
 * The summary
 *
 * @default [ ]
 */
"
`;

exports[`default empty array in square-bracket boilerplate 1`] = `
"/**
 * The summary
 *
 * @default [[]]
 */
"
`;

exports[`default empty object 1`] = `
"/**
 * The summary
 *
 * @default { }
 */
"
`;

exports[`default empty object in square-bracket boilerplate 1`] = `
"/**
 * The summary
 *
 * @default [{}]
 */
"
`;

exports[`default filled array 1`] = `
"/**
 * The summary
 *
 * @default [1, \\"two\\", { three: true }, [\\"four\\"]]
 */
"
`;

exports[`default filled object 1`] = `
"/**
 * The summary
 *
 * @default { object: \\"value\\", nestingTest: { obj: \\"nested\\" } }
 */
"
`;

exports[`default string with description 1`] = `
"/**
 * The summary
 *
 * @default \\"type\\" description
 */
"
`;

exports[`default value empty array 1`] = `
"/**
 * The summary
 *
 * @defaultValue [ ]
 */
"
`;

exports[`default value empty object 1`] = `
"/**
 * The summary
 *
 * @defaultValue { }
 */
"
`;

exports[`default with [square brackets boilerplate] 1`] = `
"/**
 * The summary
 *
 * @default [true]
 * @default [{ object: \\"value\\", nestingTest: { obj: \\"nested\\" } }]
 * @default [[1, \\"two\\", { three: true }, [\\"four\\"]]]
 */
"
`;

exports[`double default one 1`] = `
"/**
 * The summary
 *
 * @default \\"something\\"
 * @default { }
 */
"
`;

exports[`double default two 1`] = `
"/**
 * The summary
 *
 * @default { }
 * @default \\"something\\"
 */
"
`;
